--- a/src/CodingWithCalvin.VsixManifestDesigner/Dialogs/AddDependencyDialog.xaml
+++ b/src/CodingWithCalvin.VsixManifestDesigner/Dialogs/AddDependencyDialog.xaml
@@ -1,30 +1,29 @@
 <platformUi:DialogWindow x:Class="CodingWithCalvin.VsixManifestDesigner.Dialogs.AddDependencyDialog"
-                         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                         xmlns:platformUi="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
-                         xmlns:vs="clr-namespace:Microsoft.VisualStudio.Shell;assembly=Microsoft.VisualStudio.Shell.15.0"
-                         mc:Ignorable="d"
-                         Title="Add Dependency"
-                         Width="500" Height="350"
-                         WindowStartupLocation="CenterOwner"
-                         ResizeMode="NoResize"
-                         ShowInTaskbar="False"
-                         HasMaximizeButton="False"
-                         HasMinimizeButton="False"
-                         Background="{DynamicResource {x:Static vs:VsBrushes.ToolWindowBackgroundKey}}">
+                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                        xmlns:platformUi="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
+                        xmlns:vs="clr-namespace:Microsoft.VisualStudio.Shell;assembly=Microsoft.VisualStudio.Shell.15.0"
+                        mc:Ignorable="d"
+                        Title="Add Dependency"
+                        Width="500" Height="350"
+                        WindowStartupLocation="CenterOwner"
+                        ResizeMode="NoResize"
+                        ShowInTaskbar="False"
+                        HasMaximizeButton="False"
+                        HasMinimizeButton="False"
+                        Background="{DynamicResource {x:Static vs:VsBrushes.ToolWindowBackgroundKey}}">
 
     <platformUi:DialogWindow.Resources>
-        <Style TargetType="Label">
-            <Setter Property="Foreground" Value="{DynamicResource {x:Static vs:VsBrushes.ToolWindowTextKey}}" />
-        </Style>
-        <Style TargetType="TextBlock">
-            <Setter Property="Foreground" Value="{DynamicResource {x:Static vs:VsBrushes.ToolWindowTextKey}}" />
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/CodingWithCalvin.VsixManifestDesigner;component/Themes/ThemeResources.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </platformUi:DialogWindow.Resources>
 
-    <Grid Margin="15">
+    <Grid Margin="{StaticResource DialogPadding}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -40,8 +39,8 @@
         </Grid.ColumnDefinitions>
 
         <!-- Source -->
-        <Label Grid.Row="0" Grid.Column="0" Content="Source:" VerticalAlignment="Center" />
-        <ComboBox Grid.Row="0" Grid.Column="1" x:Name="SourceComboBox" Margin="0,0,0,10"
+        <Label Grid.Row="0" Grid.Column="0" Content="Source:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
+        <ComboBox Grid.Row="0" Grid.Column="1" x:Name="SourceComboBox" Margin="{StaticResource FormFieldMargin}"
                   SelectionChanged="SourceComboBox_SelectionChanged">
             <ComboBoxItem Content="Manual" Tag="Manual" />
             <ComboBoxItem Content="Project" Tag="Project" />
@@ -50,8 +49,8 @@
         </ComboBox>
 
         <!-- Project (shown when Source is Project) -->
-        <Label Grid.Row="1" Grid.Column="0" x:Name="ProjectLabel" Content="Project:" VerticalAlignment="Center" Visibility="Collapsed" />
-        <Grid Grid.Row="1" Grid.Column="1" x:Name="ProjectGrid" Margin="0,0,0,10" Visibility="Collapsed">
+        <Label Grid.Row="1" Grid.Column="0" x:Name="ProjectLabel" Content="Project:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" Visibility="Collapsed" />
+        <Grid Grid.Row="1" Grid.Column="1" x:Name="ProjectGrid" Margin="{StaticResource FormFieldMargin}" Visibility="Collapsed">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
@@ -60,21 +59,29 @@
             <Button Grid.Column="1" Content="..." Width="30" Margin="5,0,0,0" Click="BrowseProject_Click" />
         </Grid>
 
+        <!-- Installed Extension (shown when Source is Installed) -->
+        <Label Grid.Row="1" Grid.Column="0" x:Name="InstalledLabel" Content="Extension:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" Visibility="Collapsed" />
+        <ComboBox Grid.Row="1" Grid.Column="1" x:Name="InstalledComboBox" Margin="{StaticResource FormFieldMargin}" Visibility="Collapsed"
+                  SelectionChanged="InstalledComboBox_SelectionChanged">
+            <ComboBoxItem Content="(Custom - enter details below)" Tag="" />
+            <!-- Additional items are loaded dynamically from VS Setup API -->
+        </ComboBox>
+
         <!-- ID -->
-        <Label Grid.Row="2" Grid.Column="0" Content="ID:" VerticalAlignment="Center" />
-        <TextBox Grid.Row="2" Grid.Column="1" x:Name="IdTextBox" Margin="0,0,0,10" />
+        <Label Grid.Row="2" Grid.Column="0" Content="ID:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
+        <TextBox Grid.Row="2" Grid.Column="1" x:Name="IdTextBox" Margin="{StaticResource FormFieldMargin}" />
 
         <!-- Display Name -->
-        <Label Grid.Row="3" Grid.Column="0" Content="Display Name:" VerticalAlignment="Center" />
-        <TextBox Grid.Row="3" Grid.Column="1" x:Name="DisplayNameTextBox" Margin="0,0,0,10" />
+        <Label Grid.Row="3" Grid.Column="0" Content="Display Name:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
+        <TextBox Grid.Row="3" Grid.Column="1" x:Name="DisplayNameTextBox" Margin="{StaticResource FormFieldMargin}" />
 
         <!-- Version -->
-        <Label Grid.Row="4" Grid.Column="0" Content="Version:" VerticalAlignment="Center" />
-        <TextBox Grid.Row="4" Grid.Column="1" x:Name="VersionTextBox" Margin="0,0,0,10" />
+        <Label Grid.Row="4" Grid.Column="0" Content="Version:" VerticalAlignment="Center" Margin="{StaticResource FormFieldMargin}" />
+        <TextBox Grid.Row="4" Grid.Column="1" x:Name="VersionTextBox" Margin="{StaticResource FormFieldMargin}" />
 
         <!-- Location (shown for File source) -->
-        <Label Grid.Row="5" Grid.Column="0" x:Name="LocationLabel" Content="Location:" VerticalAlignment="Top" Visibility="Collapsed" />
-        <Grid Grid.Row="5" Grid.Column="1" x:Name="LocationGrid" Margin="0,0,0,10" VerticalAlignment="Top" Visibility="Collapsed">
+        <Label Grid.Row="5" Grid.Column="0" x:Name="LocationLabel" Content="Location:" VerticalAlignment="Top" Margin="{StaticResource FormFieldMargin}" Visibility="Collapsed" />
+        <Grid Grid.Row="5" Grid.Column="1" x:Name="LocationGrid" Margin="{StaticResource FormFieldMargin}" VerticalAlignment="Top" Visibility="Collapsed">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
@@ -86,8 +93,8 @@
         <!-- Buttons -->
         <StackPanel Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2"
                     Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="OK" Width="75" Margin="0,0,10,0" IsDefault="True" Click="OkButton_Click" />
-            <Button Content="Cancel" Width="75" IsCancel="True" />
+            <Button Content="OK" Margin="{StaticResource ButtonSpacing}" IsDefault="True" Click="OkButton_Click" />
+            <Button Content="Cancel" IsCancel="True" />
         </StackPanel>
     </Grid>
 </platformUi:DialogWindow>
